# Hackathon-II

./: .gitignore  README.md  hackathon II , Phase I.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/constitution/: 001-initialize-project-constitution.constitution.prompt.md
history/prompts/phase1-cli-todo/: 002-create-spec-phase-1-todo-cli.spec.prompt.md  003-plan-phase-1-todo-cli.plan.prompt.md  004-tasks-phase-1-todo-cli.tasks.prompt.md  005-implement-phase-1-todo-cli.green.prompt.md
specs/1-phase1-cli-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-phase1-cli-todo/checklists/: requirements.md
specs/1-phase1-cli-todo/contracts/: cli-commands.md
src/: main.py
src/cli/: commands.py  repl.py
src/models/: task.py
src/repositories/: todo_repository.py
src/services/: todo_service.py
tests/unit/: test_repl.py  test_repository.py  test_service.py
